--- a/CSS/style.css
+++ b/CSS/style.css
@@ -22,3 +22,11 @@
     margin: 0px auto;
     background-color: #D1C4E9;
 }
+body{
+    padding:50px 0px 0px 0px;
+    z-index:0;
+}
+
+.navbar-dark {
+     background-color: #512DA8;
+}
