--- a/CSS/style.css
+++ b/CSS/style.css
@@ -33,3 +33,9 @@ body{
 .cardform{
     background-color: #fdc02f;
 }
+.tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+}
